# Lazy-Tetris

./: .gitignore  LICENSE  LazyBlocks.py  LazyBlocks_pyglet.py  Makefile  README.md  pyproject.toml  requirements.txt
