[tool.poetry]
name = "lazy-blocks"
version = "0.1.0"
description = ""
authors = ["Omar Mohammed"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
quantecon = "^0.7.2"
pyinstaller = "^6.8.0"
arcade = "^3.0.0"
psutil = "^7.0.0"
nuitka = "^2.7.7"
pyopengl = "^3.1.9"
pandas = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
